Fix jumping of content while page is loading

--- a/static/style.css
+++ b/static/style.css
@@ -46,7 +46,7 @@ a {
 
 #introoutro {
 	width: 100%;
-	top: 70px;
+	top: 61px;
 	background :#fff;
 	text-align: center;
 	border-radius: 1em;
